include/dss_capi.h

    /*! 
    Array of strings containing the names of all properties for the active DSS object.
    */
    DSS_CAPI_DLL void DSSElement_Get_AllPropertyNames(char*** ResultPtr, int32_t* ResultCount);
    /*! 
    Same as DSSElement_Get_AllPropertyNames but using the global buffer interface for results
    */
    DSS_CAPI_DLL void DSSElement_Get_AllPropertyNames_GR(void);
    /*! 
    Full Name of Active DSS Object (general element or circuit element).
    */
    DSS_CAPI_DLL char* DSSElement_Get_Name(void);
    /*! 
    Number of Properties for the active DSS object.
    */
    DSS_CAPI_DLL int32_t DSSElement_Get_NumProperties(void);
    /*! 
    Returns the properties of the active DSS object as a JSON-encoded string.

    The `options` parameter contains bit-flags to toggle specific features.
    See `Obj_ToJSON` for more.

    (API Extension)
    */
    DSS_CAPI_DLL char* DSSElement_ToJSON(int32_t options);
    DSS_CAPI_DLL void* DSSElement_Get_Pointer(void);